--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="sryeooo">
+    <meta property="og:descripion" content="sryeooo">
+    <meta property="og:image" content="https://sryeooo.github.io/media/pic/sryeooo-pic.webp">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="style/style.css">
     <title>~/sryeooo</title>
 </head>
@@ -31,16 +35,15 @@
                 <a href="https://t.me/sryeooo" draggable="false">
                     <img src="media/files/telegram-logo.svg" alt="telegram-sryeooo" draggable="false">
                 </a>
-                <a href="https:/github.com/sryeooo" draggable="false">
+                <a href="https://github.com/sryeooo" draggable="false">
                     <img src="media/files/github-white-icon.svg" alt="github-sryeooo" draggable="false">
                 </a>
-                <a href="#" draggable="false">
+                <a href="/" draggable="false">
                     <img src="media/files/mastodon-white-icon.svg" alt="mastodon-sryeooo" draggable="false">
                 </a>
             </div>
         </div>
     </main>
-
 </body>
 
 </html>
