--- a/resume/index.html
+++ b/resume/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="title-bar-buttons">
         <div class="btn" onclick="minimizeWindow('resumeWindow')">_</div>
-        <div class="btn" onclick="maximizeWindow('resumeWindow')">▭</div>
+        <div class="btn" onclick="maximizeWindow('resumeWindow')">□</div>
         <div class="btn" onclick="closeWindow('resumeWindow')">✕</div>
       </div>
     </div>
