--- a/resume/index.html
+++ b/resume/index.html
@@ -16,7 +16,7 @@
         <span>Resume.exe</span>
       </div>
       <div class="title-bar-buttons">
-        <div class="btn" onclick="minimizeWindow('resumeWindow')">_</div>
+        <div class="btn" onclick="closeWindow('resumeWindow')">_</div>
         <div class="btn" onclick="maximizeWindow('resumeWindow')">□</div>
         <div class="btn" onclick="closeWindow('resumeWindow')">✕</div>
       </div>
@@ -104,4 +104,5 @@
   <script src="../js/resume.js">
   </script>
 </body>
+
 </html>
