--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+    <meta name="descripion" content="sryeooo's personal website">
     <meta property="og:title" content="sryeooo">
-    <meta property="og:descripion" content="sryeooo">
+    <meta property="og:descripion" content="sryeooo's personal website">
     <meta property="og:image" content="https://sryeooo.github.io/media/pic/sryeooo-pic.webp">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="style/style.css">
