--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:descripion" content="sryeooo's personal website">
     <meta property="og:image" content="https://sryeooo.github.io/media/pic/sryeooo-pic.webp">
     <meta property="og:type" content="website">
+    <link rel="shortcut icon" href="media/pic/32x32.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <title>~/sryeooo</title>
 </head>
