--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="../style/contact.css">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/contact.css">
     <title>~/sryeooo/404</title>
 </head>
 
@@ -22,7 +22,7 @@
     </nav>
     <main>
         <div class="cont-sticker">
-            <video class="sticker" src="../media/files/1442563418.webm" autoplay loop muted playsinline></video>
+            <video class="sticker" src="/media/files/1442563418.webm" autoplay loop muted playsinline></video>
         </div>
         <div class="cont-wakaranai no-copy">
             <h1>404 - Page Not Found</h1>
@@ -30,5 +30,4 @@
     </main>
 
 </body>
-
 </html>
